# rat-vml

./: .gitignore  .gitmodules  .nojekyll  :w  README.md  flake.nix  index.docx  index.html  index.qmd  index.xml  main.py  pyproject.toml  references.bib
.github/workflows/: pipeline.yml
_freeze/index/execute-results/: docx.json  html.json  tex.json  xml.json
_tex/: index.tex
index_files/execute-results/: docx.json  xml.json
notebooks/: grouping.qmd  old_comparison-preview.html  old_comparison.out.ipynb
scripts/: catalog.py  download_sourcedata.py  ingest.py  prep_data.py  run_analysis.py
site_libs/bootstrap/: bootstrap-40bc90868237fb52ce4db0fb7a2d1c8f.min.css  bootstrap-7fca231f0f6bfd3bec1af756033c583c.min.css
src/rat-vml/: pipeline.py  plotting.py
src/rat_vml/: __init__.py
src/rat_vml/analysis/: __init__.py  defaults.py  events.py  forces.py  io.py  pipeline.py  plots.py  queries.py  subject_groups.py
