[project]
name = "rat-vml"
version = "0.1.0"
description = "Analysis of Volumetric Muscle Loss Injury and Treatments in the Rodent Lateral Gastrocnemius"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "duckdb>=1.0.0",
    "ezc3d",
    "huggingface-hub",
    "matplotlib",
    "numpy",
    "opensim>=4.6",
    "osimpy",
    "polars",
    "rathindlimb",
    "rerun-sdk>=0.34.0",
    "scipy",
    "seaborn",
    "spm1d",
    "tsl-optimization",
]

[project.optional-dependencies]
dev = [
    "jupyter",
    "pytest>=8",
]

# Workstation-only deps for C3D → .rrd conversion.
# CI does NOT need these — it downloads pre-built .rrd files from HuggingFace.
ingest = [
    "ezc3d",
    "movedb-core[c3d]>=0.2.0",
    "rerun-importer-c3d>=0.1.0",
]

[tool.uv.sources]
osimpy = { git = "https://github.com/hudsonburke/osimpy.git" }
rathindlimb = { git = "https://github.com/hudsonburke/rat-hindlimb-model.git" }
tsl-optimization = { git = "https://github.com/hudsonburke/tsl-optimization.git" }
movedb-core = { git = "https://github.com/hudsonburke/movedb-core.git" }
rerun-importer-c3d = { git = "https://github.com/hudsonburke/rerun-importer-c3d.git" }

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
